<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/j"
        app:layout_constraintBottom_toTopOf="@id/e">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/m_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/m" />

        <Button
            android:id="@+id/m_name"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/m"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="TextSizeCheck" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/e"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/m"
        app:layout_constraintBottom_toTopOf="@id/s">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/e_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/e" />

        <Button
            android:id="@+id/e_name"
            android:background="@color/white"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/e"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="TextSizeCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/k"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/j"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/k_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/k" />

        <Button
            android:id="@+id/k_name"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/k"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="TextSizeCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/e"
        app:layout_constraintBottom_toTopOf="@id/h">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/s_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/s" />

        <Button
            android:id="@+id/s_name"
            android:layout_width="wrap_content"
            android:background="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/s"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="TextSizeCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/h"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/s">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/h_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/h" />

        <Button
            android:id="@+id/h_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/h"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="TextSizeCheck" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/j"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/k"
        app:layout_constraintBottom_toTopOf="@id/m">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/j_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/j" />

        <Button
            android:id="@+id/j_name"
            android:onClick="detail"
            android:background="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"
            android:text="@string/j"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="TextSizeCheck" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
